feat: 添加喝管理员相关操作的增删改查等系列操作