@@ -5,11 +5,14 @@ import cn.dev33.satoken.stp.StpInterface;
 import cn.dev33.satoken.stp.StpUtil;
 import com.henu.registration.config.security.condition.SaCondition;
 import com.henu.registration.constants.UserConstant;
+import com.henu.registration.model.entity.Admin;
+import com.henu.registration.service.AdminService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Configuration;
 
 import javax.annotation.PostConstruct;
+import javax.annotation.Resource;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -44,10 +47,23 @@ public class AuthorizationConfiguration implements StpInterface {
 		return new ArrayList<>();
 	}
 	
+	/**
+	 * 重写角色方法
+	 *
+	 * @param loginId   账号id
+	 * @param loginType 账号类型
+	 * @return 返回结果
+	 */
 	@Override
-	public List<String> getRoleList(Object o, String s) {
-		return List.of();
+	public List<String> getRoleList(Object loginId, String loginType) {
+		// 根据SaToken权限配置文档：https://sa-token.cc/doc.html#/use/jur-auth
+		// 由于此处设计主要针对于用户角色，所以角色通常只有一个，个别情况除外
+		// "*"表示上帝角色
+		SaSession saSession = StpUtil.getSessionByLoginId(loginId);
+		Admin user = (Admin) saSession.get(UserConstant.USER_LOGIN_STATE);
+		return Collections.singletonList(user.getAdminType());
 	}
+	
 	
 	/**
 	 * 依赖注入日志输出
